travis config changed, added appmap config, updated gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -390,7 +390,13 @@ subprojects {
 
     maxHeapSize = defaultMaxHeapSize
     jvmArgs = defaultJvmArgs
-
+    systemProperty 'appmap.debug', true
+    systemProperty 'appmap.config.file', "$rootDir/appmap.yml"
+    systemProperty 'appmap.output.directory', "$rootDir/tmp/appmap"
+    def agentLocation = "$rootDir/appmap.jar"
+    def appmapAgent = "-javaagent:".concat(agentLocation)
+    if (!jvmArgs.contains(appmapAgent))
+      jvmArgs += appmapAgent
     testLogging {
       events = userTestLoggingEvents ?: testLoggingEvents
       showStandardStreams = userShowStandardStreams ?: testShowStandardStreams
