--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ jdk:
 import: land-of-apps/land-of-apps:travis/java-imports.yml
 
 script:
-- travis_wait ./gradlew unitTest -PignoreFailures=true
+- travis_wait 75 ./gradlew unitTest -PignoreFailures=true
