--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ import: land-of-apps/land-of-apps:travis/java-imports.yml
 
 script:
 - ./gradlew clients:unitTest -PignoreFailures=true
+- ./gradlew streams:unitTest -PignoreFailures=true
 - ./gradlew connect:unitTest -PignoreFailures=true
 - ./gradlew generator:unitTest -PignoreFailures=true
 - ./gradlew log4j-appender:unitTest -PignoreFailures=true
